[package]
name = "xdv-node"
version = "0.1.0"
authors = ["Rogelio Morrell <molekilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci-rs = "0.11.0"
byteorder = "1.4.3"
env_logger = "0.8.3"
jsonrpc-core = "17.0.0"
jsonrpc-core-client = "17.0.0"
jsonrpc-derive = "17.0.0"
jsonrpc-http-server = "17.0.0"
jsonrpsee = "0.2.0"
tendermint = "0.19.0"
tendermint-proto = "0.19.0"
tendermint-rpc = "0.19.0"
tendermint_core = "0.1.0"
tokio = "1.6.1"
# tmkms = "0.10.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[dev-dependencies]
mock-io = { version = "0.3", default-features = false, features = ["async-tokio"] }
tokio = { version = "1.5", features = ["macros", "time"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "ansi"] }
